--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   get_it: ^8.0.2
   shimmer: ^3.0.0
   intl: ^0.19.0
+  envied: ^1.0.0
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +62,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  envied_generator: ^1.0.0
+  flutter_launcher_icons: "^0.14.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/images/launcher_icon.png"
+  min_sdk_android: 21
 
 flutter_gen:
   output: lib/core/assets/
